# cnum

./: .gitignore  .~lock.test.csv#  ARCHITECTURE.md  Couleur bloc.py  GEMINI.md  README.md  app.py  cnum.drawio.xml  conflit.py  demo.py  edt_marc_lang.ics  fiche_bilan.docx  fiche_bilan.md  final.csv  finale.csv  fonction_heures_cours.py  fonctions_parse_salle_type.py  horaire-pierre.py  horaire.py  horaire_nathan.py  horaires mathis.py  interation_api_sheet_test.py  legacysite.html  main.py  mathis.py  mon_edt.ics  nathan_horaire.py  nathan_test_branch.py  objet_app.py  poubelle.py  pyproject.toml  stats_prof.csv  stats_type.csv  test.csv  test.py  test_extract_legend.py  to_import.py
legacy/: demo.py  draw_df.py  main_refactored.py  mon_edt.ics  test.py  test_oop.py  test_session.py
legacy/calcul/: draw_stat_sheet.py  function_for_calculat_stats.py
legacy/scripts/: backup_edt.py  display_prof_edt.py  generate_changes_visualisation.py
legacy/utils/: add_column_to_df.py  clean_sheet.py  fetch_data.py
site/: main.html
site/assets/: cnum_flowchart.drawio.html
src/: config.py
src/calcul/: calculate_stat_df.py  draw_stat_sheet.py  function_for_calculat_stats.py
src/config_loader/: settings.py
src/domain/: models.py  ports.py  stats.py  timetable.py
src/main_functions/: build_sheets.py
src/scripts/: apply_drawing.py  display_prof_edt.py  draw_df.py  ical_conversion.py  parse_edt.py
src/scripts.py/: ical_conversion.py  parse_edt.py
src/tests/: check_edt_clean.py  test_extraction.py
src/utils/: buid_draw_requests.py  clean_sheet.py  detect_cell_positions.py  draw_function.py  dummies.py  fetch_data.py  fetch_data_2.py  fetch_data_old.py  functions.py
tests/: test_calculate_all_profs_stats.py  test_calculate_prof_hours.py
(+5 files in other folders)
