[project]
name = "cnum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.2",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "icalendar>=6.3.2",
    "ipython>=9.9.0",
    "oauth2client>=4.1.3",
    "pandas>=3.0.0",
]
