[project]
name = "cnum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "babel>=2.17.0",
  "dateparser>=1.2.2",
  "gspread>=6.2.1",
  "gspread-dataframe>=4.0.0",
  "gspread-formatting>=1.2.1",
  "icalendar>=6.3.2",
  "ipykernel>=7.1.0",
  "ipython>=9.9.0",
  "oauth2client>=4.1.3",
  "pandas>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utils"]
